# rust-rocksdb

./: .gitmodules  Cargo.toml  README.md
db/: c.cc
env/: env_encryption.cc
include/rocksdb/: c.h
librocksdb-sys/: Cargo.toml  build.rs  rocksdb_lib_sources.txt
librocksdb-sys/api/: c.cc  c.h
librocksdb-sys/rocksdb/env/: env_encryption.cc
librocksdb-sys/rocksdb/plugin/ippcp/: ippcp_provider.cc
librocksdb-sys/rocksdb/plugin/ippcp/examples2/: ippcp_example.cc
librocksdb-sys/rocksdb/plugin/ippcp/test_linux/: ippcp_example.cc
librocksdb-sys/rocksdb/plugin/ippcp/test_macos/: ippcp_example.cc
librocksdb-sys/rocksdb/plugin/ippcp/test_plain/: Makefile  ippcp_example.cc
librocksdb-sys/rocksdb/plugin/openssl/: openssl.mk  openssl_provider.cc  openssl_provider.h
librocksdb-sys/rocksdb/plugin/openssl/include/internal/: refcount.h
librocksdb-sys/rocksdb/plugin/openssl/include/openssl/: opensslconf.h
librocksdb-sys/src/: lib.rs
plugin/ippcp/: .gitignore  ippcp.mk
plugin/ippcp/examples/: Makefile  ippcp_example.cc
plugin/ippcp/test_macos/: Makefile
plugin/openssl/: openssl.mk  openssl_provider.h  portable_endian.h
plugin/openssl/test_openssl/: Makefile  ippcp_example.cc
plugin/openssl/tests/: ippcp_encryptor_test.cc
src/: db_options.rs  env.rs  lib.rs  librocksdb_sys.rs
