[package]
name = "ng-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database, fork for Nextgraph.org"
version = "0.21.0-ngpreview.7"
edition = "2018"
rust-version = "1.60"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
repository = "https://git.nextgraph.org/NextGraph/rust-rocksdb"
license = "Apache-2.0"
categories = [ "database" ]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://git.nextgraph.org/NextGraph/rust-rocksdb"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]
links = "rocksdb"
build = "librocksdb-sys/build.rs"

[features]
default = ["static"]
jemalloc = ["tikv-jemalloc-sys"]
static = ["libz-sys?/static", "bzip2-sys?/static"]
io-uring = []
snappy = []
lz4 = ["lz4-sys"]
zstd = ["zstd-sys"]
zlib = ["libz-sys"]
bzip2 = ["bzip2-sys"]
rtti = []
valgrind = []
multi-threaded-cf = []
serde1 = ["serde"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = [ "derive" ], optional = true }
tikv-jemalloc-sys = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
lz4-sys = { version = "1.9", optional = true }
zstd-sys = { version = "2.0", features = ["zdict_builder"], optional = true }
libz-sys = { version = "1.1", default-features = false, optional = true }
bzip2-sys = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
trybuild = "1.0"
tempfile = "3.1"
pretty_assertions = "1.0"
bincode = "1.3"
serde = { version = "1", features = [ "derive" ] }
const-cstr = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(not(any(target_os = "openbsd")))'.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.65", default-features = false, features = ["runtime"] }
glob = "0.3"
pkg-config = { version = "0.3" }